<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignStart="@+id/profile_imag2"
        android:layout_below="@+id/textView11"
        android:layout_marginTop="41dp"
        android:src="@drawable/timetable"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <!--<de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/camera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/profile_imag"
        android:layout_marginStart="77dp"
        android:layout_marginTop="59dp"
        android:src="@android:drawable/ic_menu_camera"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />-->

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_imag2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignStart="@+id/profile_imag6"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="24dp"
        android:src="@drawable/message"
        app:civ_border_color="#FF000000"
        android:onClick="goToCamera"
        app:civ_border_width="2dp" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_imag3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/profile_imag4"
        android:layout_marginStart="41dp"
        android:layout_toEndOf="@+id/textView"
        android:src="@drawable/calendar"
        android:onClick="onClick"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_imag4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/profile_imag6"
        android:layout_marginTop="24dp"
        android:src="@drawable/news"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"/>



    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_imag5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignStart="@+id/profile_imag7"
        android:layout_alignTop="@+id/profile_imag6"
        android:src="@drawable/email"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_imag6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView9"
        android:layout_marginStart="73dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/moodle"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_imag7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignStart="@+id/profile_imag8"
        android:layout_alignTop="@+id/profile_image"
        android:src="@drawable/contact"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_imag8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignStart="@+id/profile_imag3"
        android:layout_alignTop="@+id/profile_imag2"
        android:src="@drawable/brochure"
        android:onClick="gotolist"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/profile_imag4"
        android:layout_below="@+id/profile_imag4"
        android:layout_marginStart="12dp"
        android:text="@string/news_gazette"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/profile_imag3"
        android:layout_alignTop="@+id/textView"
        android:layout_marginStart="17dp"
        android:text="@string/academic_calender"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/profile_imag6"
        android:text="@string/vlg_moodle"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView9"
        android:layout_below="@+id/profile_imag5"
        android:layout_marginStart="19dp"
        android:text="@string/email"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView10"
        android:layout_below="@+id/profile_image"
        android:layout_marginStart="12dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView12"
        android:layout_alignBottom="@+id/textView12"
        android:layout_alignEnd="@+id/textView10"
        android:text="@string/exam_timetable"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView13"
        android:layout_alignEnd="@+id/textView11"
        android:text="@string/conect_us"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView16"
        android:layout_alignBottom="@+id/textView16"
        android:layout_toEndOf="@+id/textView12"
        android:text="@string/message"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView11"
        android:layout_below="@+id/profile_imag8"
        android:text="@string/online_help_desk"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"/></RelativeLayout>